# STM32L4R5ZI-Template

./: CMakeLists.txt  Makefile  README.md  arm-none-eabi-toolchain.cmake  main.cpp  startup_stm32l4r5xx.s
